r308 (19. 02. 2025):
Fixed a crash in inaccurate trackers

r307 (18. 02. 2025):
Lost in Transit: Fixed a crash after interacting with the crane

r306 (17. 02. 2025):
Added option "Show Trackers"
Menu: Increased X and Y offsets from 1280 and 720 to 1920 and 1080 respectively
Removed option "Show Only Waypoints"; Waypoints no longer rely on their tracker counterpant and now they work on their own (disabling tracker will not affect waypoint)
Removed option "Show gained XP in Mission Briefing only"; Gained XP in Mission Briefing will work if XP tracker is disabled

r305 (14. 02. 2025):
Menu: Fixed an issue where it is not possible to move in the menu with arrow keys or gamepad once you are in a heist

r304 (12. 02. 2025):
Dodge Buff: Adjusted dodge calculation to also include Sicario's Smoke Bomb (if player is inside)
Dodge Buff: Fixed an issue where the buff could be stuck in another buff

r303 (08. 02. 2025):
Added option "Accumulate Damage"

r302 (02. 02. 2025):
Poco Health Floats: Fixed possible crashes after going into custody or finishing a heist

r301 (01. 02. 2025):
Heat Street: Fixed a load crash with Restoration Mod Overhaul installed

r300 (31. 01. 2025):
Rats Day 2: Attempt to fix a load crash with Restoration Mod Overhaul installed

r299 (30. 01. 2025):
Mission Briefing: Framing Frame Day 2 will properly reflect maximum XP based on secured bags in Day 1
Mission Briefing: Watchdogs Day 2 will properly reflect maximum XP based on secured bags in Day 1

r298 (28. 01. 2025):
Added "Show Floating Damage Popup" and "Show Converts Colored to its Owner" option
Added "Weapon Swap" buff
Deployable Tracker: Fixed an issue where the tracker won't show up again after hiding when all deployables were used
Interact buff: Fixed an issue where deployable timer is not covered
Mission Briefing: Fixed an issue where Infamy XP boost is not sometimes properly rounded
Menu: VR related options will appear in VR only